--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   smooth_page_indicator: ^1.1.0
   carousel_slider: ^4.2.1
+  google_fonts: ^6.0.0
 
 dev_dependencies:
   flutter_test:
